# ArandanoIRT-ML

./: .env.template  .gitignore  API_DOCS.md  Dockerfile  LICENSE  Mejoras.md  README.md  pyproject.toml  setup_database.py
app/: main.py  schemas.py
app/core/: security.py
app/prompts/: expert_prompt.txt  router_prompt.txt
app/services/: chroma_service.py  rag_service.py
scripts/: export_db.sh  run_dev.sh  setup_swap.sh
