[project]
name = "arandanoirt-ml"
version = "0.1.0"
description = "Sistema RAG para consulta y analisis de información de estré hídrico en arándano."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "google-genai>=1.73.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "uvicorn[standard]>=0.45.0",
]
